Started requests refactoring